--- a/WSUI.OutlookPlugin/WSUIAddinModule.resx
+++ b/WSUI.OutlookPlugin/WSUIAddinModule.resx
@@ -127,7 +127,10 @@
     <value>adxMainPluginCommandBar</value>
   </metadata>
   <metadata name="adxMainPluginCommandBar.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>56, 48</value>
+    <value>27, 16</value>
+  </metadata>
+  <metadata name="wsuiMainTab.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>490, 17</value>
   </metadata>
   <metadata name="$this.TrayLargeIcon" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>False</value>
