--- a/WSPreview/Controls/PdfControl/PDFViewer.resx
+++ b/WSPreview/Controls/PdfControl/PDFViewer.resx
@@ -124,47 +124,23 @@
     <value>178, 5</value>
   </metadata>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="pageViewControl1.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
-    <value>Fill</value>
-  </data>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="pageViewControl1.Location" type="System.Drawing.Point, System.Drawing">
-    <value>0, 0</value>
-  </data>
-  <data name="pageViewControl1.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>10, 10, 10, 10</value>
-  </data>
-  <data name="pageViewControl1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>737, 513</value>
-  </data>
-  <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="pageViewControl1.TabIndex" type="System.Int32, mscorlib">
-    <value>10</value>
-  </data>
-  <data name="&gt;&gt;pageViewControl1.Name" xml:space="preserve">
-    <value>pageViewControl1</value>
-  </data>
-  <data name="&gt;&gt;pageViewControl1.Type" xml:space="preserve">
-    <value>WSPreview.PreviewHandler.PageViewer, WSPreview, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</value>
-  </data>
-  <data name="&gt;&gt;pageViewControl1.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;pageViewControl1.ZOrder" xml:space="preserve">
-    <value>1</value>
-  </data>
   <data name="buttonZoomOut.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
     <value>Left</value>
   </data>
   <data name="buttonZoomOut.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
     <value>Flat</value>
   </data>
+  <data name="buttonZoomOut.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="buttonZoomOut.Location" type="System.Drawing.Point, System.Drawing">
     <value>162, 0</value>
   </data>
   <data name="buttonZoomOut.Size" type="System.Drawing.Size, System.Drawing">
-    <value>26, 25</value>
+    <value>26, 23</value>
   </data>
+  <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="buttonZoomOut.TabIndex" type="System.Int32, mscorlib">
     <value>4</value>
   </data>
@@ -186,11 +162,14 @@
   <data name="buttonZoomIn.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
     <value>Flat</value>
   </data>
+  <data name="buttonZoomIn.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
   <data name="buttonZoomIn.Location" type="System.Drawing.Point, System.Drawing">
     <value>136, 0</value>
   </data>
   <data name="buttonZoomIn.Size" type="System.Drawing.Size, System.Drawing">
-    <value>26, 25</value>
+    <value>26, 23</value>
   </data>
   <data name="buttonZoomIn.TabIndex" type="System.Int32, mscorlib">
     <value>3</value>
@@ -213,11 +192,14 @@
   <data name="buttonNext.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
     <value>Flat</value>
   </data>
+  <data name="buttonNext.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
   <data name="buttonNext.Location" type="System.Drawing.Point, System.Drawing">
     <value>111, 0</value>
   </data>
   <data name="buttonNext.Size" type="System.Drawing.Size, System.Drawing">
-    <value>25, 25</value>
+    <value>25, 23</value>
   </data>
   <data name="buttonNext.TabIndex" type="System.Int32, mscorlib">
     <value>2</value>
@@ -237,11 +219,14 @@
   <data name="labelPage.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
     <value>Left</value>
   </data>
+  <data name="labelPage.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
   <data name="labelPage.Location" type="System.Drawing.Point, System.Drawing">
     <value>26, 0</value>
   </data>
   <data name="labelPage.Size" type="System.Drawing.Size, System.Drawing">
-    <value>85, 25</value>
+    <value>85, 23</value>
   </data>
   <data name="labelPage.TabIndex" type="System.Int32, mscorlib">
     <value>1</value>
@@ -267,11 +252,14 @@
   <data name="buttonPrev.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
     <value>Flat</value>
   </data>
+  <data name="buttonPrev.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
   <data name="buttonPrev.Location" type="System.Drawing.Point, System.Drawing">
     <value>0, 0</value>
   </data>
   <data name="buttonPrev.Size" type="System.Drawing.Size, System.Drawing">
-    <value>26, 25</value>
+    <value>26, 23</value>
   </data>
   <data name="buttonPrev.TabIndex" type="System.Int32, mscorlib">
     <value>0</value>
@@ -289,13 +277,13 @@
     <value>4</value>
   </data>
   <data name="panelButton.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
-    <value>Bottom</value>
+    <value>Fill</value>
   </data>
   <data name="panelButton.Location" type="System.Drawing.Point, System.Drawing">
-    <value>0, 488</value>
+    <value>0, 0</value>
   </data>
   <data name="panelButton.Size" type="System.Drawing.Size, System.Drawing">
-    <value>737, 25</value>
+    <value>737, 23</value>
   </data>
   <data name="panelButton.TabIndex" type="System.Int32, mscorlib">
     <value>11</value>
@@ -307,9 +295,108 @@
     <value>System.Windows.Forms.Panel, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;panelButton.Parent" xml:space="preserve">
-    <value>$this</value>
+    <value>panel2</value>
   </data>
   <data name="&gt;&gt;panelButton.ZOrder" xml:space="preserve">
+    <value>0</value>
+  </data>
+  <data name="pageViewControl1.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
+    <value>Fill</value>
+  </data>
+  <data name="pageViewControl1.Location" type="System.Drawing.Point, System.Drawing">
+    <value>0, 0</value>
+  </data>
+  <data name="pageViewControl1.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>10, 10, 10, 10</value>
+  </data>
+  <data name="pageViewControl1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>737, 490</value>
+  </data>
+  <data name="pageViewControl1.TabIndex" type="System.Int32, mscorlib">
+    <value>10</value>
+  </data>
+  <data name="&gt;&gt;pageViewControl1.Name" xml:space="preserve">
+    <value>pageViewControl1</value>
+  </data>
+  <data name="&gt;&gt;pageViewControl1.Type" xml:space="preserve">
+    <value>OFPreview.PreviewHandler.PageViewer, OF.Preview, Version=1.0.2.7, Culture=neutral, PublicKeyToken=4a21a91314e6abcb</value>
+  </data>
+  <data name="&gt;&gt;pageViewControl1.Parent" xml:space="preserve">
+    <value>panel3</value>
+  </data>
+  <data name="&gt;&gt;pageViewControl1.ZOrder" xml:space="preserve">
+    <value>0</value>
+  </data>
+  <data name="panel3.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
+    <value>Fill</value>
+  </data>
+  <data name="panel3.Location" type="System.Drawing.Point, System.Drawing">
+    <value>0, 0</value>
+  </data>
+  <data name="panel3.Size" type="System.Drawing.Size, System.Drawing">
+    <value>737, 490</value>
+  </data>
+  <data name="panel3.TabIndex" type="System.Int32, mscorlib">
+    <value>1</value>
+  </data>
+  <data name="&gt;&gt;panel3.Name" xml:space="preserve">
+    <value>panel3</value>
+  </data>
+  <data name="&gt;&gt;panel3.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Panel, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;panel3.Parent" xml:space="preserve">
+    <value>panel1</value>
+  </data>
+  <data name="&gt;&gt;panel3.ZOrder" xml:space="preserve">
+    <value>0</value>
+  </data>
+  <data name="panel2.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
+    <value>Bottom</value>
+  </data>
+  <data name="panel2.Location" type="System.Drawing.Point, System.Drawing">
+    <value>0, 490</value>
+  </data>
+  <data name="panel2.Size" type="System.Drawing.Size, System.Drawing">
+    <value>737, 23</value>
+  </data>
+  <data name="panel2.TabIndex" type="System.Int32, mscorlib">
+    <value>0</value>
+  </data>
+  <data name="&gt;&gt;panel2.Name" xml:space="preserve">
+    <value>panel2</value>
+  </data>
+  <data name="&gt;&gt;panel2.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Panel, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;panel2.Parent" xml:space="preserve">
+    <value>panel1</value>
+  </data>
+  <data name="&gt;&gt;panel2.ZOrder" xml:space="preserve">
+    <value>1</value>
+  </data>
+  <data name="panel1.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
+    <value>Fill</value>
+  </data>
+  <data name="panel1.Location" type="System.Drawing.Point, System.Drawing">
+    <value>0, 0</value>
+  </data>
+  <data name="panel1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>737, 513</value>
+  </data>
+  <data name="panel1.TabIndex" type="System.Int32, mscorlib">
+    <value>12</value>
+  </data>
+  <data name="&gt;&gt;panel1.Name" xml:space="preserve">
+    <value>panel1</value>
+  </data>
+  <data name="&gt;&gt;panel1.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Panel, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;panel1.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;panel1.ZOrder" xml:space="preserve">
     <value>0</value>
   </data>
   <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
